--- a/htmlcss/assets/layout-hw-1.html
+++ b/htmlcss/assets/layout-hw-1.html
@@ -13,13 +13,11 @@
 
             <div class="profile">
                 <img class="img-profile" src="tv.jpg">
-                <div class = "txt-profile">
-                    <h4 style = "margin: 5px;">아우리</h4>
-                    <p style = "margin: 5px;">1시간 전</p>
-                </div>
+                <div class="authour">아우리</div>
+                <div class="time-write">1시간 전</div>
             </div>
 
-            <h3 class="title" style = "clear:both">
+            <h3 class="title">
                 <strong>4k빔프로젝터 가성비 최강으로 선택했어요. </strong>
             </h3>
 
